--- a/src/Stoxs/Bundle/AppBundle/Resources/views/Agent/new.html.twig
+++ b/src/Stoxs/Bundle/AppBundle/Resources/views/Agent/new.html.twig
@@ -1,13 +1,12 @@
-{% extends "::base.html.twig" %}
+{% extends "::with_left_menu.html.twig" %}
 
 {% block title -%}
   Lägg ett bud
 {%- endblock %}
 
-{% block body %}
+{% block colbody %}
 
 <h1>Lägg ett bud</h1>
-
 
 
 {% endblock %}
