--- a/src/Stoxs/Bundle/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Stoxs/Bundle/UserBundle/Resources/views/Registration/register.html.twig
@@ -1,5 +1,9 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "::base.html.twig" %}
 
+{% block menucol %}&nbsp{% endblock %}
+
+{% block body %}
 {% block fos_user_content %}
 {% include "FOSUserBundle:Registration:register_content.html.twig" %}
 {% endblock fos_user_content %}
+{% endblock body %}
