--- a/src/Stoxs/Bundle/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Stoxs/Bundle/UserBundle/Resources/views/Security/login.html.twig
@@ -1,20 +1,41 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
-
+{% extends "::base.html.twig" %}
+{% block body %}
 {% block fos_user_content %}
 {% if error %}
     <div>{{ error }}</div>
 {% endif %}
 
 <form action="{{ path("fos_user_security_check") }}" method="post">
+<fieldset>
+  <div class="clearfix">
     <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
-
+    <div class="input">
+      <input type="text" class="xlarge" id="username" name="_username" value="{{ last_username }}" />
+    </div>
+  </div>
+  
+  <div class="clearfix">
     <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-    <input type="password" id="password" name="_password" />
-
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+    <div class="input">
+      <input class="xlarge" type="password" id="password" name="_password" />
+    </div>
+  </div>
+  
+  <div class="clearfix">
     <label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
+    <div class="input">
+      <ul class="inputs-list">
+        <li><input type="checkbox" id="remember_me" name="_remember_me" value="on" /></li>
+      </ul>
+    </div>
+  </div>
+  
+  <div class="actions">
 
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
+    <input type="submit" class="btn primary" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
+    
+  </div>
+</fieldset>
 </form>
 {% endblock fos_user_content %}
+{% endblock body %}
