--- a/src/Stoxs/Bundle/UserBundle/Resources/views/Profile/edit.html.twig
+++ b/src/Stoxs/Bundle/UserBundle/Resources/views/Profile/edit.html.twig
@@ -1,5 +1,9 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "::with_left_menu.html.twig" %}
+
+{% block colbody %}
 
 {% block fos_user_content %}
 {% include "FOSUserBundle:Profile:edit_content.html.twig" %}
 {% endblock fos_user_content %}
+
+{% endblock %}
