--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -36,6 +36,9 @@
             <ul class="nav">
               <li class="active"><a href="{{ path('start') }}">Start</a></li>
               <li class="active"><a href="{{ path('how_it_works') }}">Hur funkar det?</a></li>
+              {% if is_granted("ROLE_ADMIN") %}
+              <li><a href="{{ path('send_sms') }}">Skicka nytt sms</a></li>
+              {% endif %}
             </ul>
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
             <p class="pull-right">
