--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,6 +38,7 @@
               <li class="active"><a href="{{ path('how_it_works') }}">Hur funkar det?</a></li>
               {% if is_granted("ROLE_ADMIN") %}
               <li><a href="{{ path('send_sms') }}">Skicka nytt sms</a></li>
+              <li><a href="{{ path('new_auction') }}">Skapa ny auktion</a></li>
               {% endif %}
             </ul>
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
