When creating a new sms a auction can be chosen

--- a/src/Stoxs/Bundle/AppBundle/Resources/views/Sms/send.html.twig
+++ b/src/Stoxs/Bundle/AppBundle/Resources/views/Sms/send.html.twig
@@ -21,6 +21,12 @@
         </div>
       </div>
 
+      <div class="clearfix">
+        <label>Auktion:</label>
+        <div class="input">
+            {{ form_widget(form.auctions) }}
+        </div>
+      </div>
 
     {{ form_rest(form) }}
 
