--- a/app/Resources/views/with_left_menu.html.twig
+++ b/app/Resources/views/with_left_menu.html.twig
@@ -6,11 +6,11 @@
   
     {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
     <ul>
-      {% if app.user.hasActiveBid %}
-      <li><a href="{{ path('agent_edit') }}">Ändra bud</a></li>
-      {% else %}
+      {#% if app.user.hasActiveBid %#}
+      <li><a href="{{ path('agent_edit_select') }}">Ändra bud</a></li>
+      {#% else %#}
       <li><a href="{{ path('agent_new_select') }}">Lägg ett bud</a></li>
-      {% endif %}
+      {#% endif %#}
       <li><a href="{{ path('fos_user_profile_show') }}">Mina uppgifter</a></li>
     </ul>
     {% else %}
