Replaced some lorem ipsum texts

--- a/src/Stoxs/Bundle/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/Stoxs/Bundle/AppBundle/Resources/views/Default/index.html.twig
@@ -3,7 +3,8 @@
 {% block herounit %}
 <div class="hero-unit">
   <h1>Marknadstips till marknadspris</h1>
-  <p>Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+  <p>Vill Du äga aktien innan stimmet får upp ögonen för denna?</p>
+  <p>Stoxs.se ger Dig informationen Du behöver, när Du behöver den, till Ditt pris!</p>
   <p><a class="btn primary large" href="{{ path('fos_user_registration_register') }}">Bli medlem &raquo;</a></p>
 </div>
 {% endblock %}
@@ -19,8 +20,7 @@
     <p>Ju högre pris ju tidigare ligger Du i kön och får snabbare information!</p>
   </div>
   <div class="span8">
-    <h2>Marknadstips till marknadspris</h2>
-    <p>Vill Du äga aktien innan stimmet får upp ögonen för denna?</p>
+    <h2>Vad är Stoxs?</h2>
     <p>Stoxs.se är tjänsten som gör att Du kan vara först in – och först ut – när det händer. Du kommer aldrig mer behöva bli lidande för att Du inte var uppkopplad – Stoxs.se förser Dig med informationen Du behöver – när Du behöver den.</p>
     <p>Våra topprankade aktieanalytiker följer marknaderna när de är öppna – och ofta när de är stängda med – så att Du slipper det. De bevakar och informerar Dig med ett SMS.</p>
     <p>Med vår tjänst kan du alltid hålla dig uppdaterad om hur det går för dina aktier, även när du inte sitter framför datorn. Snabbt, smidigt och enkelt beställer du vilka aktier eller index du vill bevaka, samt vilken servicenivå du önskar.</p>
