--- a/src/Stoxs/Bundle/AppBundle/Resources/views/Default/currentBids.html.twig
+++ b/src/Stoxs/Bundle/AppBundle/Resources/views/Default/currentBids.html.twig
@@ -8,15 +8,21 @@
 <table>
 <thead>
 <tr>
-<th>Plats</th>
-<th>Bud</th>
+<th style="width:33%">Plats</th>
+<th style="width:33%">Bud</th>
+<th style="width:33%">Får SMS:et tidigast efter…</th>
 </tr>
 </thead>
 <tbody>
 {% for key, bid in auction.winningBids %}
 <tr>
-<td>{% if bid.agent is not null%}<b>{% endif %}{{ key + 1 }}{% if bid.agent is not null%}</b>{% endif %}</td>
-<td>{% if bid.agent is not null%}<b>{% endif %}{{ bid.amount }} kr{% if bid.agent is not null%}</b>{% endif %}</td>
+<td>{% if bid.agent is not null%}<strong>{% endif %}{{ key + 1 }}{% if bid.agent is not null%}</strong>{% endif %}</td>
+<td>{% if bid.agent is not null%}<strong>{% endif %}{{ bid.amount }} kr{% if bid.agent is not null%}</strong>{% endif %}</td>
+<td>{% if key == 0 %}
+<strong>Direkt!</strong>
+{% else %}
+{{ key * 2 }} sekunder
+{% endif %}</td>
 </tr>
 {% endfor %}
 </tbody>
