--- a/src/Stoxs/Bundle/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/Stoxs/Bundle/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -24,6 +24,8 @@
   <label>Personnummer</label>
   <div class="input">
       {{ form_widget(form.ssn, {'attr': {'class': 'xlarge'}}) }}
+      <span class="help-block">Vi behöver ditt personnnummer för att fakturera dig</span>
+      
   </div>
 </div>
 
@@ -42,7 +44,7 @@
 </div>
 
 <div class="clearfix">
-  {{ form_label(form.plainPassword.second) }}
+  <label>Upprepa lösenord:</label>
   <div class="input">
       {{ form_widget(form.plainPassword.second, {'attr': {'class': 'xlarge'}}) }}
   </div>
