Början på bootstrap2ifieringen

--- a/src/Stoxs/Bundle/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/Stoxs/Bundle/AppBundle/Resources/views/Default/index.html.twig
@@ -5,7 +5,7 @@
   <h1>Marknadstips till marknadspris</h1>
   <p>Vill Du äga aktien innan stimmet får upp ögonen för denna?</p>
   <p>Stoxs.se ger Dig informationen Du behöver, när Du behöver den, till Ditt pris!</p>
-  <p><a class="btn primary large" href="{{ path('fos_user_registration_register') }}">Bli medlem &raquo;</a></p>
+  <p><a class="btn btn-primary btn-large" href="{{ path('fos_user_registration_register') }}">Bli medlem &raquo;</a></p>
 </div>
 {% endblock %}
 
