--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,7 +8,8 @@
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
         
         {% stylesheets output='css/compressed.css'
-          '@StoxsAppBundle/Resources/public/bootstrap/css/bootstrap.min.css' 
+            '@StoxsAppBundle/Resources/public/bootstrap/css/bootstrap.min.css' 
+            '@StoxsAppBundle/Resources/public/bootstrap/css/bootstrap-responsive.min.css' 
         %}
 
             <link rel="stylesheet" href="{{ asset_url }}" type="text/css" media="screen" />
@@ -21,7 +22,8 @@
         
         {% javascripts 
           '@StoxsAppBundle/Resources/public/js/main.js'
-          '@StoxsAppBundle/Resources/public/js/jquery-1.6.4.min.js'
+          '@StoxsAppBundle/Resources/public/js/jquery-1.7.1.min.js'
+          '@StoxsAppBundle/Resources/public/bootstrap/js/bootstrap.min.js'
         %}
           <script src="{{ asset_url }}" type="text/javascript"></script> 
         {% endjavascripts %}
@@ -50,8 +52,8 @@
                             <li><a href="{{ path('send_sms') }}">Skicka nytt sms</a></li>
                             <li><a href="{{ path('new_auction') }}">Skapa ny auktion</a></li>
                             {% endif %}
+
                         </ul>
-                    </div>
                         {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                         <p class="pull-right">
                             {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
@@ -60,14 +62,13 @@
                             </a>
                         </p>
                         {% else %}
-
-
-                        <form action="{{ path("fos_user_security_check") }}" method="post" class="navbar-search pull-right">
-                            <input class="input-small" type="text" id="username" name="_username"  placeholder="{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}" />
-                            <input class="input-small" type="password" id="password" name="_password" placeholder="{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}" />
-                            <button class="btn" type="submit" id="_submit" name="_submit">{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}</button>
-                        </form>
+                        <ul class="nav pull-right">         
+                            <li>
+                                <a href="{{ path('fos_user_security_login') }}">Logga in</a>
+                            </li>
+                        </ul>
                         {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
